# data-science-practice

./: .gitignore  README.md
Hands-On Machine Learning with Scikit-Learn, Keras, and TensorFlow/: main.py  pyproject.toml
Hands-On Machine Learning with Scikit-Learn, Keras, and TensorFlow/tests/: test_hands_on machine learning with scikit_learn, keras, and tensorflow.py
KNN/: pyproject.toml
KNN/knn/: 16.KNNAlgorithm.py  17.KNN숫자인식예제.py  main.py
KNN/tests/: test_knn.py
SCTF2017-Writeups/: knn_trainer.py  main.py  make_train_data.py  pyproject.toml  run.py
SCTF2017-Writeups/sctf2017_writeups/: front.py  test.py  utils.py
SCTF2017-Writeups/tests/: test_sctf2017_writeups.py
deeplearning_from_scratch/: pyproject.toml
deeplearning_from_scratch/deeplearning_from_scratch/: chap02.py  chap03-6.py  chap03.py  chap04.py  chap05.py  chap06.py  chap07.py  two_layer_net.py  utils.py
deeplearning_from_scratch/deeplearning_from_scratch/common/: layer_naive.py  layers.py  optimizer.py  utils.py
deeplearning_from_scratch/deeplearning_from_scratch/dataset/: mnist.py
deeplearning_from_scratch3/: hello.py  pyproject.toml
deeplearning_from_scratch3/deeplearning_from_scratch3/: step01.py  step02.py  step03.py  step04.py  step06.py  step08.py  step09.py  step10.py  step11.py  step12.py  step14.py  step15.py  step16.py  step17.py  step18.py  step19.py  step21.py
learn_matplotlib/: main.py  pyproject.toml
learn_matplotlib/learn_matplotlib/: Matplotlib1.py  Matplotlib2.py
learn_matplotlib/tests/: test_learn_matplotlib.py
learn_pandas/: main.py  pyproject.toml
learn_pandas/learn_pandas/: Pandas1.py  Pandas2.py  Pandas3.py
learn_pandas/tests/: test_learn_pandas.py
ml-pytorch-scikit-learn/: main.py  pyproject.toml
ml-pytorch-scikit-learn/ml_pytorch_scikit_learn/: run.py
ml-pytorch-scikit-learn/ml_pytorch_scikit_learn/chapter2/: AdalineGD.py  AdalineSGD.py  Perceptron.py  runner.py
ml-pytorch-scikit-learn/ml_pytorch_scikit_learn/chapter3/: LogisticRegressionGD.py  runner.py
ml-pytorch-scikit-learn/tests/: test_ml_pytorch_scikit_learn.py
opencv/: pyproject.toml
opencv/opencv/: 06.OpenCV소개및기본사용법.py  08.OpenCV이미지변형.py  09.OpenCV이미지합치기.py  10.OpenCV임계점처리하기.py  11.OpenCVTracker.py  12.OpenCV도형그리기.py  13.OpenCVContours.py  14.OpenCVContours처리.py  15.OpenCVFiltering.py  main.py
opencv/tests/: test_opencv.py
pandas/: pyproject.toml
py-torch/: main.py  make_eng_w2v.py  pyproject.toml
py-torch/py_torch/: ConvolutionalNeuralNetwork.py  Embedding.py  LinearRegression.py  LogisticRegression.py  NLP.py  Perceptron.py  SoftmaxRegression.py  make_eng_w2v.py
py-torch/tests/: test_py_torch.py
pytorch-kr-book/: main.py  pyproject.toml
pytorch-kr-book/chap02/: chap02.py
pytorch-kr-book/chap03/: chap03.py
pytorch-kr-book/chap04/: chap04.py
pytorch-kr-book/chap05/: chap05.py
pytorch-kr-book/chap06/: chap06.py
pytorch-kr-book/chap07/: chap07.py
pytorch-kr-book/tests/: test_pytorch_kr_book.py
pytorch-kr-youtube/: main.py  pyproject.toml
