[tool.poetry]
name = "Hands-On Machine Learning with Scikit-Learn, Keras, and TensorFlow"
version = "0.1.0"
description = ""
authors = ["Heejae Kwon <sfhy33@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"
PyQt5 = "^5.15.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
