[tool.poetry]
name = "KNN"
version = "0.1.0"
description = ""
authors = ["권희재 <hjkwon93@fonetech.co.kr>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
glob2 = "^0.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
opencv-python = "^4.5.4"
matplotlib = "^3.5.0"
PyQt5 = "^5.15.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
KNN = "knn.main:main"