[tool.poetry]
name = "SCTF2017-Writeups"
version = "0.1.0"
description = ""
authors = ["권희재 <hjkwon93@fonetech.co.kr>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
Pillow = "^8.4.0"
Flask = "^2.0.2"
opencv-python = "^4.5.4"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

