[tool.poetry]
name = "deeplearning-from-scratch"
version = "0.1.0"
description = ""
authors = ["Heejae Kwon <sfhy33@gmail.com>"]
readme = "README.md"
packages = [{include = "deeplearning_from_scratch"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
