[tool.poetry]
name = "deeplearning-from-scratch3"
version = "0.1.0"
description = ""
authors = ["Heejae Kwon <sfhy33@gmail.com>"]
readme = "README.md"
packages = [{include = "deeplearning_from_scratch3"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
