[tool.poetry]
name = "learn_matplotlib"
version = "0.1.0"
description = ""
authors = ["권희재 <hjkwon93@fonetech.co.kr>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
matplotlib = "^3.5.0"
numpy = "^1.21.4"
PyQt5 = "^5.15.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
