[tool.poetry]
name = "learn_pandas"
version = "0.1.0"
description = ""
authors = ["권희재 <hjkwon93@fonetech.co.kr>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.3.4"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
