[tool.poetry]
name = "opencv"
version = "0.1.0"
description = ""
authors = ["권희재 <hjkwon93@fonetech.co.kr>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
opencv-python = "^4.5.4"
pandas = "^1.3.4"
matplotlib = "^3.5.0"
PyQt5 = "^5.15.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
opencv = "opencv.main:main"